kubernetes/solar-app-db-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-app-db-deployment
  labels:
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solar-app-db
  template:
    metadata:
      labels:
        app: solar-app-db
    spec:
      containers:
        - name: redis
          imagePullPolicy: Always
          image: redis:7
          ports:
          - name: http
            containerPort: 6379
          volumeMounts:
          - name: redis-data
            mountPath: /data
      volumes:
        - name:  redis-data
          persistentVolumeClaim:
            claimName:  solar-app-db-pvc
