kubernetes/solar-app-wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-app-wrk-deployment
  labels:
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solar-app-wrk
  template:
    metadata:
      labels:
        app: solar-app-wrk
    spec:
      containers:
        - name: worker
          imagePullPolicy: Always
          image: jakewendling/solar_app:0.1
          volumeMounts:
            - name: worker-data
              mountPath: /data
      volumes:
        - name: worker-data
          persistentVolumeClaim:
            claimName: solar-app-wrk-pvc
