kubernetes/solar-app-db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: solar-app-db-service
  labels:
    env: test
spec:
  type: ClusterIP
  selector:
    app: solar-app-db
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
