kubernetes/solar-app-api-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: solar-app-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "jakew57.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: solar-app-api-nodeport
              port:
                  number: 32765
